--- a/android-exoplayer/build.gradle
+++ b/android-exoplayer/build.gradle
@@ -17,4 +17,6 @@ dependencies {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
+    compile 'com.github.rubensousa:previewseekbar:1.2'
+    compile 'com.github.rubensousa:previewseekbar-exoplayer:2.6.0'
 }
