--- a/android-exoplayer/build.gradle
+++ b/android-exoplayer/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "27.0.2"
 
     defaultConfig {
         minSdkVersion 16
@@ -17,6 +17,5 @@ dependencies {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
     compile 'com.squareup.okhttp3:okhttp:3.4.2'
-    compile 'com.github.rubensousa:previewseekbar:1.2'
-    compile 'com.github.rubensousa:previewseekbar-exoplayer:2.6.0'
+    compile 'com.android.support:appcompat-v7:25.4.0'
 }
