--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "dependencies": {
         "keymirror": "0.1.1",
         "prop-types": "^15.5.10",
-        "@imggaming/dice-shield": "git+ssh://git@github.com/DiceTechnology/dice-shield.git#semver:=1.0.7-rc.0"
+        "@imggaming/dice-shield": "git+ssh://git@github.com/DiceTechnology/dice-shield.git#b8753004d73c555a23df35f41322a9d06fb21537"
     },
     "scripts": {
         "install": "./scripts/install-dependencies",
