--- a/android-exoplayer/build.gradle
+++ b/android-exoplayer/build.gradle
@@ -18,16 +18,14 @@ android {
     }
 }
 
-def exoplayerVersion = rootProject.ext.exoplayerVersion
-
 dependencies {
     //noinspection GradleDynamicVersion
     compileOnly "com.facebook.react:react-native:${safeExtGet('reactNativeVersion', '+')}"
-    implementation("com.google.android.exoplayer:exoplayer:$exoplayerVersion") {
+    implementation("com.google.android.exoplayer:exoplayer:${safeExtGet('exoplayerVersion', '2.9.6'}") {
         exclude group: 'com.android.support'
     }
 
-    implementation "com.google.android.exoplayer:extension-mediasession:$exoplayerVersion"
+    implementation "com.google.android.exoplayer:extension-mediasession:${safeExtGet('exoplayerVersion', '2.9.6'}"
 
     // All support libs must use the same version
     implementation "androidx.annotation:annotation:1.0.0"
@@ -36,7 +34,7 @@ dependencies {
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation("com.google.android.exoplayer:extension-okhttp:$exoplayerVersion") {
+    implementation("com.google.android.exoplayer:extension-okhttp:${safeExtGet('exoplayerVersion', '2.9.6'}") {
         exclude group: 'com.squareup.okhttp3', module: 'okhttp'
     }
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
